compiler/testData/diagnostics/tests/enum/enumWithEmptyName.kt
// RUN_PIPELINE_TILL: FRONTEND
enum class<!SYNTAX!><!> {
}

/* GENERATED_FIR_TAGS: enumDeclaration */
